--- a/weather_app/index.html
+++ b/weather_app/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/cyborg/bootstrap.min.css" rel="stylesheet" integrity="sha384-D9XILkoivXN+bcvB2kSOowkIvIcBbNdoDQvfBNsxYAIieZbx8/SI4NeUvrRGCpDi" crossorigin="anonymous">
         <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-        <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+        <link href="https://getbootstrap.com/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
         <!-- Custom styles for this template -->
         <link href="css/style.css" rel="stylesheet">
@@ -19,15 +19,62 @@
         <![endif]-->
     </head>
     <body>
-        <div class="container">
-            <div class="jumbotron">
-                <h1 class="text-center">L<i class="fa fa-cloud" aria-hidden="true"></i>cal Weather</h1>
-            </div>
-        </div>
+        <div class="container jumbotron">
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3">
+                    <div id="main">
+                        <h1 class="text-center">
+                            L<i id="weather" class="fa fa-cloud"></i>cal Weather
+                        </h1>
 
+                        <div class="row">
+                            <div class="col-md-6 col-md-offset-3 text-center">
+                                <p class="text-center">
+                                    <span class="temp-toggle">
+                                        <span id="temperature"></span> &deg;C
+                                    </span>
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-md-6 col-md-offset-3">
+                                <div class="center-block">
+                                    <div class="weather-display">
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <br>
+                        <div class="row">
+                            <div class="col-md-12 text-center">
+                                <button class="btn btn-primary center-block" type="button" id="get-weather">
+                                    Get weather
+                                </button>
+                                <br>
+                                <p class="text-muted">
+                                    Click on the temperature to toggle the
+                                    system (metric/imperial)
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Display the weather -->
+            <!-- <div class="row">
+                <div class="col-md-6 col-md-offset-3">
+
+                </div>
+            </div> -->
+        </div>
 
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <script src="js/app.js"></script>
     </body>
 </html>
