--- a/weather_app/index.html
+++ b/weather_app/index.html
@@ -30,8 +30,8 @@
                         <div class="row">
                             <div class="col-md-6 col-md-offset-3 text-center">
                                 <p class="text-center">
-                                    <span class="temp-toggle">
-                                        <span id="temperature"></span> &deg;C
+                                    <span id="temp-toggle">
+                                        <span id="temperature"></span> &deg;<span id="system">C</span>
                                     </span>
                                 </p>
                             </div>
